first version mobile fix

--- a/tia/css/style.css
+++ b/tia/css/style.css
@@ -1,14 +1,14 @@
 
 body {
        font-family: 'Merriweather','Oswald', sans-serif;
-         font-size: 1.5vw;
+         font-size: 1.7vw;
 }
 
 #banner{
   width:70%;
 }
 #bannerDiv{
-  width:100vw;
+  width:100%;
   text-align: center;
   background-color: black;
   margin-bottom:60px;
@@ -35,7 +35,7 @@ body {
   width:100%;
   min-height:300px;
   /*border-bottom: 1px solid #888;*/
-  padding:2em 10%;
+  padding:5% 10%;
 }
 
 .section h1{
